doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/greenfoot/extensions/greenfoot.jar:/usr/share/greenfoot/bluejcore.jar:/usr/share/greenfoot/bluejeditor.jar:/usr/share/greenfoot/bluejext.jar:/usr/share/greenfoot/AppleJavaExtensions.jar:/usr/share/greenfoot/junit-4.11.jar:/usr/share/greenfoot/hamcrest-core-1.3.jar:/usr/share/greenfoot/bluej.jar:/usr/share/greenfoot/diffutils-1.2.1.jar:/usr/share/greenfoot/commons-logging-api-1.1.2.jar:/usr/share/greenfoot/jl1.0.1.jar:/usr/share/greenfoot/opencsv-2.3.jar:/usr/share/greenfoot/xom-1.2.9.jar:/usr/share/greenfoot/lang-stride.jar:/usr/share/greenfoot/nsmenufx-2.1.4.jar:/usr/share/greenfoot/richtextfx-fat-0.9.0.jar:/usr/share/greenfoot/guava-17.0.jar:/usr/share/greenfoot/javassist-3.18.0.jar:/usr/share/greenfoot/commons-vfs2-2.0.jar:/usr/share/greenfoot/httpclient-4.1.1.jar:/usr/share/greenfoot/httpcore-4.1.jar:/usr/share/greenfoot/httpmime-4.1.1.jar:/usr/share/java/openjfx/jre/lib/ext/jfxrt.jar:/tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo
-d
/tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo/doc
-encoding
UTF-8
-charset
UTF-8
/tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo/CrabWorld.java
<---- end of javadoc command ---->
Loading source file /tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo/CrabWorld.java...
/tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo/CrabWorld.java:41: error: not a statement
        Greenfoot.p   
                 ^
/tmp/guest-1zr6kq/Escritorio/Ejemplo---Cangrejo/CrabWorld.java:41: error: ';' expected
        Greenfoot.p   
                    ^
2 errors
